@@ -9,7 +9,18 @@
 package com.powsybl.nad.routing;
 
 import com.powsybl.commons.PowsyblException;
-import com.powsybl.nad.model.*;
+import com.powsybl.nad.model.BranchEdge;
+import com.powsybl.nad.model.BusNode;
+import com.powsybl.nad.model.Edge;
+import com.powsybl.nad.model.Graph;
+import com.powsybl.nad.model.Injection;
+import com.powsybl.nad.model.Node;
+import com.powsybl.nad.model.Point;
+import com.powsybl.nad.model.TextEdge;
+import com.powsybl.nad.model.TextNode;
+import com.powsybl.nad.model.ThreeWtEdge;
+import com.powsybl.nad.model.ThreeWtNode;
+import com.powsybl.nad.model.VoltageLevelNode;
 import com.powsybl.nad.svg.SvgParameters;
 import com.powsybl.nad.utils.RadiusUtils;
 
@@ -125,7 +136,7 @@ public abstract class AbstractEdgeRouting implements EdgeRouting {
 
     private List<Double> findAvailableAngles(List<Double> anglesOtherEdges, int nbAngles, double slotAperture) {
         if (!anglesOtherEdges.isEmpty()) {
-            anglesOtherEdges.add(anglesOtherEdges.get(0) + 2 * Math.PI);
+            anglesOtherEdges.add(anglesOtherEdges.getFirst() + 2 * Math.PI);
 
             double[] deltaAngles = new double[anglesOtherEdges.size() - 1];
             int[] nbAvailableSlots = new int[anglesOtherEdges.size() - 1];
@@ -251,7 +262,7 @@ public abstract class AbstractEdgeRouting implements EdgeRouting {
         List<Double> sortedAngles = angles.stream().sorted().collect(Collectors.toList());
 
         // Then calculating the apertures
-        sortedAngles.add(sortedAngles.get(0) + 2 * Math.PI);
+        sortedAngles.add(sortedAngles.getFirst() + 2 * Math.PI);
         double[] deltaAngles = new double[3];
         for (int i = 0; i < 3; i++) {
             deltaAngles[i] = sortedAngles.get(i + 1) - sortedAngles.get(i);
