@@ -7,18 +7,36 @@
 package com.powsybl.sld.svg.styles.iidm;
 
 import com.powsybl.commons.config.BaseVoltagesConfig;
-import com.powsybl.iidm.network.*;
+import com.powsybl.iidm.network.Bus;
+import com.powsybl.iidm.network.Connectable;
+import com.powsybl.iidm.network.Identifiable;
+import com.powsybl.iidm.network.Network;
+import com.powsybl.iidm.network.Terminal;
 import com.powsybl.sld.model.graphs.Graph;
 import com.powsybl.sld.model.graphs.VoltageLevelGraph;
 import com.powsybl.sld.model.graphs.VoltageLevelInfos;
-import com.powsybl.sld.model.nodes.*;
+import com.powsybl.sld.model.nodes.Edge;
+import com.powsybl.sld.model.nodes.EquipmentNode;
+import com.powsybl.sld.model.nodes.FeederNode;
+import com.powsybl.sld.model.nodes.Node;
 import com.powsybl.sld.model.nodes.Node.NodeType;
+import com.powsybl.sld.model.nodes.NodeSide;
+import com.powsybl.sld.model.nodes.SwitchNode;
 import com.powsybl.sld.model.nodes.feeders.FeederTwLeg;
 import com.powsybl.sld.svg.SvgParameters;
 import com.powsybl.sld.svg.styles.AbstractVoltageStyleProvider;
 import com.powsybl.sld.svg.styles.StyleClassConstants;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import static com.powsybl.sld.svg.styles.StyleClassConstants.NODE_INFOS;
@@ -36,7 +54,7 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
     private final Map<String, Integer> stylesIndices = new HashMap<>();
     private final Network network;
     private final SvgParameters svgParameters;
-    private boolean busHighlightOnHover;
+    private final boolean busHighlightOnHover;
 
     public TopologicalStyleProvider(Network network) {
         this(BaseVoltagesConfig.fromPlatformConfig(), network, new SvgParameters());
@@ -108,7 +126,7 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
     private Map<String, String> createBusIdStyleMap(String baseVoltageName, String vlId) {
         String baseBusStyle = STYLE_PREFIX + "bus";
         List<Bus> buses = network.getVoltageLevel(vlId)
-                .getBusView().getBusStream().collect(Collectors.toList());
+                .getBusView().getBusStream().toList();
 
         Map<String, String> busIdStyleMap = new HashMap<>();
 
@@ -156,7 +174,7 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
                             .collect(Collectors.toList());
                     if (terminals.size() == 1) {
                         // if more than one (vl-internal transformer), we don't know which side to take
-                        Bus bus = terminals.get(0).getBusView().getBus();
+                        Bus bus = terminals.getFirst().getBusView().getBus();
                         return bus != null ? bus.getId() : null;
                     }
                     return null;
@@ -196,7 +214,7 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
             nodeStyles.add(StyleClassConstants.DISCONNECTED_STYLE_CLASS);
         } else {
             getBaseVoltageName(voltageLevelInfos)
-                    .map(baseVoltageName -> getNodeTopologicalStyle(baseVoltageName, voltageLevelInfos.getId(), node))
+                    .map(baseVoltageName -> getNodeTopologicalStyle(baseVoltageName, voltageLevelInfos.id(), node))
                     .ifPresentOrElse(nodeStyles::add, () -> nodeStyles.add(StyleClassConstants.DISCONNECTED_STYLE_CLASS));
         }
         return nodeStyles;
@@ -211,7 +229,7 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
     public List<String> getBusStyles(String busId, VoltageLevelGraph graph) {
         List<String> busStyles = new ArrayList<>();
         getVoltageLevelStyle(graph.getVoltageLevelInfos()).ifPresent(busStyles::add);
-        String busStyle = vlBusIdStyleMap.getOrDefault(graph.getVoltageLevelInfos().getId(), Collections.emptyMap())
+        String busStyle = vlBusIdStyleMap.getOrDefault(graph.getVoltageLevelInfos().id(), Collections.emptyMap())
                 .getOrDefault(busId, null);
         Optional.ofNullable(busStyle).ifPresent(busStyles::add);
         busStyles.add(NODE_INFOS);
@@ -225,7 +243,7 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
 
     private Optional<String> getBaseVoltageName(VoltageLevelInfos voltageLevelInfos) {
         return Optional.ofNullable(voltageLevelInfos)
-                .flatMap(vli -> baseVoltagesConfig.getBaseVoltageName(vli.getNominalVoltage(), BASE_VOLTAGE_PROFILE));
+                .flatMap(vli -> baseVoltagesConfig.getBaseVoltageName(vli.nominalVoltage(), BASE_VOLTAGE_PROFILE));
     }
 
     @Override
